--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>𝑷𝒂𝒏𝒕𝒉𝒆𝒓 𝒑𝒂𝒊𝒓𝒊𝒏𝒈 𝒄𝒐𝒅𝒆</title>
+  <title>𝑔𝑒𝑒𝑘 𝑝𝑎𝑟𝑖𝑛𝑔 𝑐𝑜𝑑𝑒</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
@@ -142,12 +142,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">BLACK PANTHER SESSION SCANNER</h3>
+            <h3 class="centered-text">GEEK MD SESSION SCANNER</h3>
             <br>
-            <h6>𝑴𝑨𝑫𝑬 𝑩𝒀 𝑰𝑩𝑹𝑨𝑯𝑰𝑴 𝑻𝑬𝑪𝑯.</h6>
+            <h6>𝑴𝑨𝑫𝑬 𝑩𝒀 𝐆𝐄𝐄𝐊 𝑻𝑬𝑪𝑯.</h6>
             <h6>Enter Your Number with Country Code.</h6>
             <div class="input-container">
-              <input placeholder="254710772xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
+              <input placeholder="2376980465xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
               <button id="submit">Submit</button>
             </div>
             
