--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title> BLACK PANTHER SESSION SCANNER </title>
+  <title> GEEK MD SESSION SCANNER </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image:  url("https://telegra.ph/file/519565b3e46794eea808d.jpg"); /* set the background image */
+      background-image:  url("https://telegra.ph/file/7da627d08dde1d110894e.jpg"); /* set the background image */
     }
 
     .btn {
@@ -78,16 +78,12 @@
 
   <button onclick="window.open(`https://qr-code-panther-19894751f2f0.herokuapp.com/qr`)" class="btn">qr code</button>
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
-  <button onclick="window.open(`https://github.com/ibrahimaitech`)" class="btn">github</button>
-  <button onclick="window.open(`https://wa.me/message/74F2PC4JA4F3P1`)" class="btn">Contact Me</button>
-  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/ibrahimaitech/BLACK-PANTHER-MD/tree/main`)" class="btn">Deploy BLACKPANTHER MD</button>
-  <button onclick="window.open(`https://chat.whatsapp.com/H6KaBzAhRnw52DM93KsRy2`)" class="btn">Wa Group</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VaZuGSxEawdxZK9CzM0Y`)" class="btn">Wa Channel</button>
-  <button onclick="window.open(`https://www.instagram.com/ibrahim_tech_official`)" class="btn">Instagram</button>
-  <button onclick="window.open(`https://www.youtube.com/@ibrahimmdgpt`)" class="btn">YouTube</button>
-  <button onclick="window.open(`https://bmw-code-scanner-8df743f73014.herokuapp.com/`)" class="btn">Deploy my other bot BMW MD</button>
+  <button onclick="window.open(`https://github.com/GEEKMD099`)" class="btn">github</button>
+  <button onclick="window.open(`https://wa.me/237698046545`)" class="btn">Contact Me</button>
+  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/GEEKMD099/GEEK&MD1.0/tree/main`)" class="btn">Deploy GEEK MD</button>
+  <button onclick="window.open(`https://chat.whatsapp.com/FRQiuFWlYJ3Jolx7OACtKo`)" class="btn">Wa Group</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VaWQOHsFSAsv3SD3dJ3a`)" class="btn">Wa Channel</button>
+  <button onclick="window.open(`https://www.instagram.com/Ruben_De_Jean`)" class="btn">Instagram</button>
   
-  
-
 </body>
 </html>
