--- a/main.html
+++ b/main.html
@@ -76,11 +76,11 @@
 </head>
 <body>
 
-  <button onclick="window.open(`https://qr-code-panther-19894751f2f0.herokuapp.com/qr`)" class="btn">qr code</button>
+  <button onclick="window.open(`https://geek-qr-c6ccf7b7583e.herokuapp.com/`)" class="btn">qr code</button>
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
   <button onclick="window.open(`https://github.com/GEEKMD099`)" class="btn">github</button>
   <button onclick="window.open(`https://wa.me/237698046545`)" class="btn">Contact Me</button>
-  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/GEEKMD099/GEEK&MD1.0/tree/main`)" class="btn">Deploy GEEK MD</button>
+  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/GEEKMD099/GEEK-MD1.0/tree/main`)" class="btn">Deploy GEEK MD</button>
   <button onclick="window.open(`https://chat.whatsapp.com/FRQiuFWlYJ3Jolx7OACtKo`)" class="btn">Wa Group</button>
   <button onclick="window.open(`https://whatsapp.com/channel/0029VaWQOHsFSAsv3SD3dJ3a`)" class="btn">Wa Channel</button>
   <button onclick="window.open(`https://www.instagram.com/Ruben_De_Jean`)" class="btn">Instagram</button>
